// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test should run Test Environment is available RTL should be available render a div 1`] = `
<div>
  <div>
    Hello Jest!
  </div>
</div>
`;

exports[`Test should run Test Environment is available RTL should be available render a label 1`] = `
<div>
  <label>
    Hello Jest!
  </label>
</div>
`;

exports[`Test should run Test Environment is available RTL should be available render an h1 1`] = `
<div>
  <h1
    class="bp4-heading"
  >
    Hello Jest!
  </h1>
</div>
`;
